--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
             <div class="edu">
               <h3><i class="fa fa-graduation-cap"></i>Education</h3>
               <ul>
-                <li><span>Bachelor of Computer Scince</span><small> 2014 - Jun 2018</small></li>
+                <li><span>Bachelor of Computer Science</span><small> 2014 - Jun 2018</small></li>
                 <li><span> Higher Secondary Certificate (HSC)</span><small> 2012 - Jun 2014</small></li>
                 <li><span> Secondary School Certificate (SSC) </span><small> 2010 - Jun 2012</small></li>
 
