--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
     
         <img src="1.jpg" alt="">
         <h2>I'm Vivek Joshi</h2>
+	<a href="contact.php" style="font-size:20px;color:#fff;">click for contact</a>
         
     </div> 
 <nav class="menu">
   <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open"/>
-  <label class="menu-open-button" for="menu-open">
+  <label class="menu-open-button" for="menu-open"> 
     <span class="hamburger hamburger-1"></span>
     <span class="hamburger hamburger-2"></span>
     <span class="hamburger hamburger-3"></span>
